tests/NormalTests/paczka1/fuzzy1/69143172.err
Error in line 13: ZzWeqYKq6u S257 61,2
Error in line 15: ZzWeqYKq6u S672 22,3
Error in line 11: a8T5mtQuuXA A506 18,9
Error in line 17: a8T5mtQuuXA S257 78,0
Error in line 6: eCL2Ae7rvWR S218 62,9
Error in line 22: eCL2Ae7rvWR S672 4,3
Error in line 23: A506 S672 80,7
